fix: align page min width

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,6 +40,7 @@ body::-webkit-scrollbar-corner {
 }
 
 html {
+    min-width: theme("minWidth.entire-website");
     background-color: theme('colors.darkest');
 }
 
